# mlops-first-project

./: README.md
iris-mlops/: Dockerfile  Makefile  pyproject.toml
iris-mlops/.github/workflows/: deploy.yml
iris-mlops/infra/: Pulumi.yaml  index.ts  package-lock.json  package.json
iris-mlops/src/iris_mlops/serving/: EXAMPLES.md
iris-mlops/src/iris_mlops/training/: train.py
iris-mlops/tests/: test_iris_mlops.py
mlops_infra/: README.md  index.ts  package-lock.json  package.json
model-template/: README.md  cookiecutter.json
model-template/{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  pyproject.toml
model-template/{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml
model-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/serving/: __main__.py
model-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/training/: train.py
