[tool.poetry]
name = "iris-mlops"
version = "0.1.0"
description = "My awesome model!"
authors = ["Kan Asvasena <email@example.com>"]

[tool.poetry.dependencies]
python = "3.10.7"
pandas = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
mlflow = "^2.8.0"
scikit-learn = "^1.3.2"
boto3 = "1.28.16"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
dvc = {extras = ["s3"], version = "^3.28.0"}

[tool.poetry.scripts]
train = "src.iris_mlops.training.train:main"
serve = "src.iris_mlops.serving.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"